HZC-2040: Add the Node version restriction for the 5.0

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=10.4.0"
+  },
   "scripts": {
     "client": "npm install && node client.js",
     "client_with_ssl": "npm install && node client_with_ssl.js"
