update cloud sample

--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": ">=10.4.0"
+  },
   "scripts": {
     "client": "npm install && node client.js",
     "client_with_ssl": "npm install && node client_with_ssl.js"
   },
   "author": "",
   "dependencies": {
-    "async": "^2.6.1",
-    "hazelcast-client": "^3.12.1"
+    "hazelcast-client": "^5.0.4"
   }
 }
