--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "author": "",
   "dependencies": {
-    "hazelcast-client": "^5.1.0"
+    "hazelcast-client": "^5.2.0",
+    "printf": "^0.6.1"
   }
 }
-
