--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "dependencies": {
     "hazelcast-client": "^5.2.0",
-    "printf": "^0.6.1"
+    "printf": "^0.6.1",
+    "sprintf-js": "^1.1.2"
   }
 }
